<resources>
    <string name="app_name">ItlaCalc</string>
    <string name="number_one">1</string>
    <string name="number_nine">9</string>
    <string name="number_four">4</string>
    <string name="number_zero">0</string>
    <string name="text_clear">CLEAR</string>
    <string name="dot_sign">.</string>
    <string name="number_two">2</string>
    <string name="equal_sign">=</string>
    <string name="number_three">3</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eigth">8</string>
    <string name="div_sign">/</string>
    <string name="multi_sign">x</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="percent_sign">%</string>
</resources>
